--- a/PORTFOLIO_CAMACHO/523e2524996f4a4b9ceed9db05723886.md
+++ b/PORTFOLIO_CAMACHO/523e2524996f4a4b9ceed9db05723886.md
@@ -1,16 +1,5 @@
-+----------------------------------+------------------------+----------+
-| ![](vertopal_                    |                        |          |
-| 523e2524996f4a4b9ceed9db05723886 |                        |          |
-| /media/image1.png){width="2.4in" |                        |          |
-| height="0.5881944444444445in"}   |                        |          |
-|                                  |                        |          |
-| SCHOOL OF INFORMATION AND        |                        |          |
-| TECHNOLOGY                       |                        |          |
-+----------------------------------+------------------------+----------+
-| NAME:                            | DATE PERFORMED:        |          |
-+----------------------------------+------------------------+----------+
-| Section:                         | DATE SUBMITTED:        |          |
-+----------------------------------+------------------------+----------+
+![image](https://github.com/user-attachments/assets/0aec0307-56f4-4ac3-a38f-7af9a73f21ae)
+
 
 # SYSADM1 -- Managing Services in Windows
 
